Added authentication via auth0 and updated api spec
